// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render failed 1`] = `
.c6 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #f50057;
  color: #FFFFFF;
}

.c6 a {
  color: #FFFFFF;
}

.c8 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c14 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c17 {
  box-sizing: border-box;
  margin-bottom: 8px;
  margin-right: 16px;
  width: 100%;
}

.c15 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c15:active {
  opacity: 0.56;
}

.c15:hover,
.c15:focus {
  background: #651FFF;
}

.c15:active {
  background: #354AA4;
}

.c15:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c20 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-top: 8px;
  width: 100%;
}

.c20:active {
  opacity: 0.56;
}

.c20:hover,
.c20:focus {
  background: #651FFF;
}

.c20:active {
  background: #354AA4;
}

.c20:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c22 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c22:active {
  opacity: 0.56;
}

.c22:hover,
.c22:focus {
  background: #2C3A73;
}

.c22:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c19 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  color: #324148;
  background-color: #FFFFFF;
  margin-top: 4px;
}

.c19::-ms-clear {
  display: none;
}

.c19::placeholder {
  opacity: 0.4;
}

.c19:read-only {
  cursor: not-allowed;
}

.c18 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0px;
}

.c9 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin: 0px;
  margin-bottom: 24px;
  margin-right: auto;
  color: rgba(255,255,255,0.87);
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
}

.c11 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
}

.c4 {
  box-sizing: border-box;
  flex: 1;
  display: flex;
  flex-direction: column;
}

.c12 {
  box-sizing: border-box;
  padding: 8px;
  background-color: #010B1C;
  border-radius: 4px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c13 {
  box-sizing: border-box;
  margin-right: 8px;
  display: flex;
}

.c16 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
  flex-direction: row;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 600px;
  width: 100%;
  min-height: 328px;
}

.c7 {
  box-sizing: border-box;
  margin-bottom: 8px;
  min-height: 254px;
  flex: 0 0 auto;
  display: flex;
  flex-direction: column;
}

.c21 {
  box-sizing: border-box;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4"
      >
        <div
          class="c5"
          color="text.primary"
        >
          Add Kubernetes
        </div>
        <div
          class="c6"
          kind="danger"
        >
          some error message
        </div>
        <div
          class="c7"
        >
          <div
            class="c8"
          >
            Install Teleport Agent in your cluster via Helm to easily connect your Kubernetes cluster with Teleport. For all the available values of the helm chart see
             
            <a
              class="c9"
              href="https://goteleport.com/docs/kubernetes-access/helm/reference/teleport-kube-agent/"
              rel="noreferrer"
              target="_blank"
            >
              the documentation
            </a>
            .
          </div>
          <div
            class="c8"
          >
            <div
              class="c10"
            >
              <span
                class="c11"
              >
                Step 1
              </span>
               - Add teleport-agent chart to your charts repository
            </div>
            <div
              class="c12"
            >
              <div
                class="c13"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c14"
                  style="user-select: none;"
                >
                  $
                </div>
                <div>
                  helm repo add teleport https://charts.releases.teleport.dev && helm repo update
                </div>
              </div>
              <button
                class="c15"
                kind="primary"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c8"
          >
            <span
              class="c11"
            >
              Step 2
            </span>
             - Generate a script to automatically configure and install the teleport-agent
            <div
              class="c16"
            >
              <form
                style="width: 100%;"
              >
                <div
                  class="c17"
                  width="100%"
                >
                  <label
                    class="c18"
                    font-size="0"
                  >
                    Namespace
                    <input
                      autocomplete="off"
                      class="c19"
                      color="text.onLight"
                      inputmode="text"
                      placeholder="teleport"
                      type="text"
                      value=""
                    />
                  </label>
                </div>
                <div
                  class="c17"
                  width="100%"
                >
                  <label
                    class="c18"
                    font-size="0"
                  >
                    Kubernetes Cluster Name
                    <span
                      class="c10"
                      style="font-weight: normal;"
                    >
                       - Name shown to Teleport users connecting to the cluster.
                    </span>
                    <input
                      autocomplete="off"
                      class="c19"
                      color="text.onLight"
                      inputmode="text"
                      placeholder="my-cluster"
                      type="text"
                      value=""
                    />
                  </label>
                </div>
                <button
                  class="c20"
                  kind="primary"
                  type="submit"
                >
                  Generate Script
                </button>
              </form>
            </div>
          </div>
          
        </div>
        <div
          class="c21"
        >
          <button
            class="c22"
            kind="secondary"
          >
            Close
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render loaded 1`] = `
.c7 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c13 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c16 {
  box-sizing: border-box;
  margin-bottom: 8px;
  margin-right: 16px;
  width: 100%;
}

.c14 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c14:active {
  opacity: 0.56;
}

.c14:hover,
.c14:focus {
  background: #651FFF;
}

.c14:active {
  background: #354AA4;
}

.c14:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c19 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-top: 8px;
  width: 100%;
}

.c19:active {
  opacity: 0.56;
}

.c19:hover,
.c19:focus {
  background: #651FFF;
}

.c19:active {
  background: #354AA4;
}

.c19:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c21 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c21:active {
  opacity: 0.56;
}

.c21:hover,
.c21:focus {
  background: #2C3A73;
}

.c21:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c18 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  color: #324148;
  background-color: #FFFFFF;
  margin-top: 4px;
}

.c18::-ms-clear {
  display: none;
}

.c18::placeholder {
  opacity: 0.4;
}

.c18:read-only {
  cursor: not-allowed;
}

.c17 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0px;
}

.c8 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin: 0px;
  margin-bottom: 24px;
  margin-right: auto;
  color: rgba(255,255,255,0.87);
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
}

.c4 {
  box-sizing: border-box;
  flex: 1;
  display: flex;
  flex-direction: column;
}

.c11 {
  box-sizing: border-box;
  padding: 8px;
  background-color: #010B1C;
  border-radius: 4px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c12 {
  box-sizing: border-box;
  margin-right: 8px;
  display: flex;
}

.c15 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
  flex-direction: row;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 600px;
  width: 100%;
  min-height: 328px;
}

.c6 {
  box-sizing: border-box;
  margin-bottom: 8px;
  min-height: 254px;
  flex: 0 0 auto;
  display: flex;
  flex-direction: column;
}

.c20 {
  box-sizing: border-box;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4"
      >
        <div
          class="c5"
          color="text.primary"
        >
          Add Kubernetes
        </div>
        <div
          class="c6"
        >
          <div
            class="c7"
          >
            Install Teleport Agent in your cluster via Helm to easily connect your Kubernetes cluster with Teleport. For all the available values of the helm chart see
             
            <a
              class="c8"
              href="https://goteleport.com/docs/kubernetes-access/helm/reference/teleport-kube-agent/"
              rel="noreferrer"
              target="_blank"
            >
              the documentation
            </a>
            .
          </div>
          <div
            class="c7"
          >
            <div
              class="c9"
            >
              <span
                class="c10"
              >
                Step 1
              </span>
               - Add teleport-agent chart to your charts repository
            </div>
            <div
              class="c11"
            >
              <div
                class="c12"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c13"
                  style="user-select: none;"
                >
                  $
                </div>
                <div>
                  helm repo add teleport https://charts.releases.teleport.dev && helm repo update
                </div>
              </div>
              <button
                class="c14"
                kind="primary"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c7"
          >
            <span
              class="c10"
            >
              Step 2
            </span>
             - Generate a script to automatically configure and install the teleport-agent
            <div
              class="c15"
            >
              <form
                style="width: 100%;"
              >
                <div
                  class="c16"
                  width="100%"
                >
                  <label
                    class="c17"
                    font-size="0"
                  >
                    Namespace
                    <input
                      autocomplete="off"
                      class="c18"
                      color="text.onLight"
                      inputmode="text"
                      placeholder="teleport"
                      type="text"
                      value=""
                    />
                  </label>
                </div>
                <div
                  class="c16"
                  width="100%"
                >
                  <label
                    class="c17"
                    font-size="0"
                  >
                    Kubernetes Cluster Name
                    <span
                      class="c9"
                      style="font-weight: normal;"
                    >
                       - Name shown to Teleport users connecting to the cluster.
                    </span>
                    <input
                      autocomplete="off"
                      class="c18"
                      color="text.onLight"
                      inputmode="text"
                      placeholder="my-cluster"
                      type="text"
                      value=""
                    />
                  </label>
                </div>
                <button
                  class="c19"
                  kind="primary"
                  type="submit"
                >
                  Generate Script
                </button>
              </form>
            </div>
          </div>
          
        </div>
        <div
          class="c20"
        >
          <button
            class="c21"
            kind="secondary"
          >
            Close
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render processing 1`] = `
.c7 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c13 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c16 {
  box-sizing: border-box;
  margin-bottom: 8px;
  margin-right: 16px;
  width: 100%;
}

.c14 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c14:active {
  opacity: 0.56;
}

.c14:hover,
.c14:focus {
  background: #651FFF;
}

.c14:active {
  background: #354AA4;
}

.c14:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c19 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-top: 8px;
  width: 100%;
}

.c19:active {
  opacity: 0.56;
}

.c19:hover,
.c19:focus {
  background: #651FFF;
}

.c19:active {
  background: #354AA4;
}

.c19:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c21 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c21:active {
  opacity: 0.56;
}

.c21:hover,
.c21:focus {
  background: #2C3A73;
}

.c21:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c18 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  color: #324148;
  background-color: #FFFFFF;
  margin-top: 4px;
}

.c18::-ms-clear {
  display: none;
}

.c18::placeholder {
  opacity: 0.4;
}

.c18:read-only {
  cursor: not-allowed;
}

.c17 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0px;
}

.c8 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin: 0px;
  margin-bottom: 24px;
  margin-right: auto;
  color: rgba(255,255,255,0.87);
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
}

.c4 {
  box-sizing: border-box;
  flex: 1;
  display: flex;
  flex-direction: column;
}

.c11 {
  box-sizing: border-box;
  padding: 8px;
  background-color: #010B1C;
  border-radius: 4px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c12 {
  box-sizing: border-box;
  margin-right: 8px;
  display: flex;
}

.c15 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
  flex-direction: row;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 600px;
  width: 100%;
  min-height: 328px;
}

.c6 {
  box-sizing: border-box;
  margin-bottom: 8px;
  min-height: 254px;
  flex: 0 0 auto;
  display: flex;
  flex-direction: column;
}

.c20 {
  box-sizing: border-box;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4"
      >
        <div
          class="c5"
          color="text.primary"
        >
          Add Kubernetes
        </div>
        <div
          class="c6"
        >
          <div
            class="c7"
          >
            Install Teleport Agent in your cluster via Helm to easily connect your Kubernetes cluster with Teleport. For all the available values of the helm chart see
             
            <a
              class="c8"
              href="https://goteleport.com/docs/kubernetes-access/helm/reference/teleport-kube-agent/"
              rel="noreferrer"
              target="_blank"
            >
              the documentation
            </a>
            .
          </div>
          <div
            class="c7"
          >
            <div
              class="c9"
            >
              <span
                class="c10"
              >
                Step 1
              </span>
               - Add teleport-agent chart to your charts repository
            </div>
            <div
              class="c11"
            >
              <div
                class="c12"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c13"
                  style="user-select: none;"
                >
                  $
                </div>
                <div>
                  helm repo add teleport https://charts.releases.teleport.dev && helm repo update
                </div>
              </div>
              <button
                class="c14"
                kind="primary"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c7"
          >
            <span
              class="c10"
            >
              Step 2
            </span>
             - Generate a script to automatically configure and install the teleport-agent
            <div
              class="c15"
            >
              <form
                style="width: 100%;"
              >
                <div
                  class="c16"
                  width="100%"
                >
                  <label
                    class="c17"
                    font-size="0"
                  >
                    Namespace
                    <input
                      autocomplete="off"
                      class="c18"
                      color="text.onLight"
                      inputmode="text"
                      placeholder="teleport"
                      type="text"
                      value=""
                    />
                  </label>
                </div>
                <div
                  class="c16"
                  width="100%"
                >
                  <label
                    class="c17"
                    font-size="0"
                  >
                    Kubernetes Cluster Name
                    <span
                      class="c9"
                      style="font-weight: normal;"
                    >
                       - Name shown to Teleport users connecting to the cluster.
                    </span>
                    <input
                      autocomplete="off"
                      class="c18"
                      color="text.onLight"
                      inputmode="text"
                      placeholder="my-cluster"
                      type="text"
                      value=""
                    />
                  </label>
                </div>
                <button
                  class="c19"
                  disabled=""
                  kind="primary"
                  type="submit"
                >
                  Generate Script
                </button>
              </form>
            </div>
          </div>
          
        </div>
        <div
          class="c20"
        >
          <button
            class="c21"
            kind="secondary"
          >
            Close
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render with token generated 1`] = `
.c7 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c13 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c16 {
  box-sizing: border-box;
  margin-bottom: 8px;
  margin-right: 16px;
  width: 100%;
}

.c20 {
  box-sizing: border-box;
}

.c14 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c14:active {
  opacity: 0.56;
}

.c14:hover,
.c14:focus {
  background: #651FFF;
}

.c14:active {
  background: #354AA4;
}

.c14:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c19 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-top: 8px;
  width: 100%;
}

.c19:active {
  opacity: 0.56;
}

.c19:hover,
.c19:focus {
  background: #651FFF;
}

.c19:active {
  background: #354AA4;
}

.c19:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c24 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c24:active {
  opacity: 0.56;
}

.c24:hover,
.c24:focus {
  background: #2C3A73;
}

.c24:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c18 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  color: #324148;
  background-color: #FFFFFF;
  margin-top: 4px;
}

.c18::-ms-clear {
  display: none;
}

.c18::placeholder {
  opacity: 0.4;
}

.c18:read-only {
  cursor: not-allowed;
}

.c17 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0px;
}

.c8 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin: 0px;
  margin-bottom: 24px;
  margin-right: auto;
  color: rgba(255,255,255,0.87);
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
}

.c21 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 4px;
  margin-top: 8px;
}

.c4 {
  box-sizing: border-box;
  flex: 1;
  display: flex;
  flex-direction: column;
}

.c11 {
  box-sizing: border-box;
  padding: 8px;
  background-color: #010B1C;
  border-radius: 4px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c12 {
  box-sizing: border-box;
  margin-right: 8px;
  display: flex;
}

.c15 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
  flex-direction: row;
}

.c22 {
  box-sizing: border-box;
  margin-bottom: 8px;
  padding: 8px;
  background-color: #010B1C;
  border-radius: 4px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 600px;
  width: 100%;
  min-height: 328px;
}

.c6 {
  box-sizing: border-box;
  margin-bottom: 8px;
  min-height: 254px;
  flex: 0 0 auto;
  display: flex;
  flex-direction: column;
}

.c23 {
  box-sizing: border-box;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4"
      >
        <div
          class="c5"
          color="text.primary"
        >
          Add Kubernetes
        </div>
        <div
          class="c6"
        >
          <div
            class="c7"
          >
            Install Teleport Agent in your cluster via Helm to easily connect your Kubernetes cluster with Teleport. For all the available values of the helm chart see
             
            <a
              class="c8"
              href="https://goteleport.com/docs/kubernetes-access/helm/reference/teleport-kube-agent/"
              rel="noreferrer"
              target="_blank"
            >
              the documentation
            </a>
            .
          </div>
          <div
            class="c7"
          >
            <div
              class="c9"
            >
              <span
                class="c10"
              >
                Step 1
              </span>
               - Add teleport-agent chart to your charts repository
            </div>
            <div
              class="c11"
            >
              <div
                class="c12"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c13"
                  style="user-select: none;"
                >
                  $
                </div>
                <div>
                  helm repo add teleport https://charts.releases.teleport.dev && helm repo update
                </div>
              </div>
              <button
                class="c14"
                kind="primary"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c7"
          >
            <span
              class="c10"
            >
              Step 2
            </span>
             - Generate a script to automatically configure and install the teleport-agent
            <div
              class="c15"
            >
              <form
                style="width: 100%;"
              >
                <div
                  class="c16"
                  width="100%"
                >
                  <label
                    class="c17"
                    font-size="0"
                  >
                    Namespace
                    <input
                      autocomplete="off"
                      class="c18"
                      color="text.onLight"
                      inputmode="text"
                      placeholder="teleport"
                      type="text"
                      value=""
                    />
                  </label>
                </div>
                <div
                  class="c16"
                  width="100%"
                >
                  <label
                    class="c17"
                    font-size="0"
                  >
                    Kubernetes Cluster Name
                    <span
                      class="c9"
                      style="font-weight: normal;"
                    >
                       - Name shown to Teleport users connecting to the cluster.
                    </span>
                    <input
                      autocomplete="off"
                      class="c18"
                      color="text.onLight"
                      inputmode="text"
                      placeholder="my-cluster"
                      type="text"
                      value=""
                    />
                  </label>
                </div>
                <button
                  class="c19"
                  kind="primary"
                  type="submit"
                >
                  Regenerate Script
                </button>
              </form>
            </div>
          </div>
          <div
            class="c7"
          >
            <span
              class="c10"
            >
              Step 3
            </span>
             - Install the helm chart
            <div
              class="c20"
            >
              <div
                class="c21"
              >
                The token will be valid for
                 
                <span
                  class="c10"
                >
                  4 hours
                  .
                </span>
              </div>
              <div
                class="c22"
              >
                <div
                  class="c12"
                  style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
                >
                  <div
                    class="c13"
                    style="user-select: none;"
                  >
                    $
                  </div>
                  <div>
                    cat &lt;&lt; EOF &gt; prod-cluster-values.yaml
roles: kube
authToken: some token
proxyAddr: localhost:443
kubeClusterName: 
teleportVersionOverride: 10.0.0
EOF
 
helm install teleport-agent teleport/teleport-kube-agent -f prod-cluster-values.yaml --create-namespace --namespace 
                  </div>
                </div>
                <button
                  class="c14"
                  kind="primary"
                  style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
                >
                  Copy
                </button>
              </div>
              <div
                class="c9"
              >
                <span
                  class="c10"
                >
                  Tip
                </span>
                : Save the YAML file to apply updates later
              </div>
            </div>
          </div>
        </div>
        <div
          class="c23"
        >
          <button
            class="c24"
            kind="secondary"
          >
            Close
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
